syntax = "proto3";
package code_runner.v1;

service CodeRunner {
  rpc ExecuteCode (ExecuteCodeReq) returns (ExecuteCodeRes);
}

message ExecuteCodeReq {
  string language = 1;
  string code_path = 2;
  repeated string input_filepath = 3;
  int32 timelimit = 4;
}

message ExecuteCodeRes {
  string filepath = 1;
//  string input_filepath = 2;
//  bool error = 3;
}
